# ZeroHelper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Launcher.manifest  qt.conf  readme.md  res.qrc  res.rc  vcpkg.json
res/: defaultUserData.json
src/: main.cpp
src/DataStream/: MemberIco.cpp  MemberIco.h  PathManage.cpp  PathManage.h  PluginManager.cpp  PluginManager.h  TextDataStreamer.cpp  TextDataStreamer.h
src/gameLogic/: calculationPower.cpp  calculationPower.h
src/gameWindow/: GameFrame.cpp  GameFrame.h  GameFrameNew.cpp  GameFrameNew.h  GameState.h  MathTable.cpp  MathTable.h
src/loginWindow/: AccFrame.cpp  AccFrame.h  ArtButton.cpp  ArtButton.h  MainFrame.cpp  MainFrame.h
src/network/: HttpManager.cpp  HttpManager.h  LoginGamePost.cpp  LoginGamePost.h  TcpControlApi.cpp  TcpControlApi.h
src/playerData/: GameManager.cpp  GameManager.h  ServicesManager.cpp  ServicesManager.h  TeamManager.cpp  TeamManager.h
